--- a/smart_network/localbox/localbox.vcxproj
+++ b/smart_network/localbox/localbox.vcxproj
@@ -50,7 +50,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\third_party\boost_1_55_0\include\boost-1_55;$(SolutionDir)..\third_party\mongoose-5.3;$(SolutionDir)..\third_party\v8-3.25.30\include;$(SolutionDir)..\localbox;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\third_party\boost_1_55_0\include\boost-1_55;$(SolutionDir)..\third_party\mongoose-5.3;$(SolutionDir)..\third_party\v8-3.25.30\include;$(SolutionDir)..\third_party\jsoncpp-src-0.5.0\include;$(SolutionDir)..\localbox;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -69,7 +69,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\third_party\boost_1_55_0\include\boost-1_55;$(SolutionDir)..\third_party\mongoose-5.3;$(SolutionDir)..\third_party\v8-3.25.30\include;$(SolutionDir)..\localbox;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\third_party\boost_1_55_0\include\boost-1_55;$(SolutionDir)..\third_party\mongoose-5.3;$(SolutionDir)..\third_party\v8-3.25.30\include;$(SolutionDir)..\third_party\jsoncpp-src-0.5.0\include;$(SolutionDir)..\localbox;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -82,13 +82,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="backend\chat_message.cpp" />
+    <ClCompile Include="backend\network_manager.cpp" />
+    <ClCompile Include="backend\ssdp_ethernet_sender.cpp" />
+    <ClCompile Include="backend\ssdp_listener.cpp" />
+    <ClCompile Include="backend\ssdp_scheduler.cpp" />
+    <ClCompile Include="backend\tcp_adapter.cpp" />
+    <ClCompile Include="backend\tcp_channel.cpp" />
     <ClCompile Include="basebox\channel.cpp" />
     <ClCompile Include="basebox\context.cpp" />
     <ClCompile Include="basebox\device.cpp" />
+    <ClCompile Include="basebox\device_desc.cpp" />
+    <ClCompile Include="basebox\device_manager.cpp" />
+    <ClCompile Include="basebox\root_storage.cpp" />
     <ClCompile Include="basebox\service.cpp" />
+    <ClCompile Include="basebox\service_desc.cpp" />
+    <ClCompile Include="basebox\service_manager.cpp" />
     <ClCompile Include="basebox\template_factory.cpp" />
     <ClCompile Include="base\io_service.cpp" />
     <ClCompile Include="base\ref_implement.cpp" />
+    <ClCompile Include="base\utility.cpp" />
     <ClCompile Include="base_object\channel_template.cpp" />
     <ClCompile Include="base_object\device_template.cpp" />
     <ClCompile Include="base_object\file_object.cpp" />
@@ -112,18 +125,36 @@
     <ClCompile Include="storage.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="backend\boost_lib_fwd.h" />
+    <ClInclude Include="backend\channel.h" />
+    <ClInclude Include="backend\channel_delegate.h" />
+    <ClInclude Include="backend\chat_message.h" />
+    <ClInclude Include="backend\network_adapter.h" />
+    <ClInclude Include="backend\network_manager.h" />
+    <ClInclude Include="backend\ssdp_ethernet_sender.h" />
+    <ClInclude Include="backend\ssdp_listener.h" />
+    <ClInclude Include="backend\ssdp_scheduler.h" />
+    <ClInclude Include="backend\tcp_adapter.h" />
+    <ClInclude Include="backend\tcp_channel.h" />
     <ClInclude Include="basebox\channel.h" />
     <ClInclude Include="basebox\channel_ref.h" />
     <ClInclude Include="basebox\context.h" />
     <ClInclude Include="basebox\device.h" />
+    <ClInclude Include="basebox\device_desc.h" />
+    <ClInclude Include="basebox\device_manager.h" />
     <ClInclude Include="basebox\device_ref.h" />
+    <ClInclude Include="basebox\root_storage.h" />
+    <ClInclude Include="basebox\root_storage_ref.h" />
     <ClInclude Include="basebox\service.h" />
+    <ClInclude Include="basebox\service_desc.h" />
+    <ClInclude Include="basebox\service_manager.h" />
     <ClInclude Include="basebox\service_ref.h" />
     <ClInclude Include="basebox\template_factory.h" />
     <ClInclude Include="base\io_service.h" />
     <ClInclude Include="base\io_service_ref.h" />
+    <ClInclude Include="base\reference.h" />
     <ClInclude Include="base\ref_implement.h" />
-    <ClInclude Include="base\ref_object.h" />
+    <ClInclude Include="base\utility.h" />
     <ClInclude Include="base_object\channel_template.h" />
     <ClInclude Include="base_object\device_template.h" />
     <ClInclude Include="base_object\file_object.h" />
@@ -150,6 +181,9 @@
     <ClInclude Include="storage.h" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\jsoncpp\jsoncpp.vcxproj">
+      <Project>{ce6f9b98-25c2-47b1-8e13-cbccd80866df}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\mongoose\mongoose.vcxproj">
       <Project>{84fa6df3-15f8-4ca2-925e-16b42bf8b943}</Project>
     </ProjectReference>
