--- a/smart_network/localbox/localbox.vcxproj
+++ b/smart_network/localbox/localbox.vcxproj
@@ -96,28 +96,27 @@
     <ClCompile Include="basebox\service.cpp" />
     <ClCompile Include="basebox\service_desc.cpp" />
     <ClCompile Include="basebox\service_manager.cpp" />
-    <ClCompile Include="basebox\template_factory.cpp" />
     <ClCompile Include="base\io_service.cpp" />
     <ClCompile Include="base\ref_object.cpp" />
     <ClCompile Include="base\utility.cpp" />
-    <ClCompile Include="base_object\channel_template.cpp" />
-    <ClCompile Include="base_object\device_template.cpp" />
-    <ClCompile Include="base_object\file_object.cpp" />
-    <ClCompile Include="base_object\service_template.cpp" />
     <ClCompile Include="frontend\http_message_impl.cpp" />
-    <ClCompile Include="frontend\http_object_template.cpp" />
     <ClCompile Include="frontend\http_request.cpp" />
     <ClCompile Include="frontend\http_request_manager.cpp" />
-    <ClCompile Include="frontend\http_request_template.cpp" />
     <ClCompile Include="frontend\http_response_impl.cpp" />
-    <ClCompile Include="frontend\http_response_template.cpp" />
     <ClCompile Include="frontend\http_server.cpp" />
     <ClCompile Include="frontend\http_websocket_impl.cpp" />
     <ClCompile Include="frontend\http_websocket_manager.cpp" />
-    <ClCompile Include="frontend\http_websocket_template.cpp" />
+    <ClCompile Include="js\backend\channel_template.cpp" />
+    <ClCompile Include="js\device_template.cpp" />
+    <ClCompile Include="js\file_object.cpp" />
+    <ClCompile Include="js\frontend\http_object_template.cpp" />
+    <ClCompile Include="js\frontend\http_request_template.cpp" />
+    <ClCompile Include="js\frontend\http_response_template.cpp" />
+    <ClCompile Include="js\frontend\http_websocket_template.cpp" />
+    <ClCompile Include="js\service_template.cpp" />
+    <ClCompile Include="js\template_factory.cpp" />
     <ClCompile Include="localbox.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="main_ui_channel.cpp" />
     <ClCompile Include="sample.cpp" />
     <ClCompile Include="server_manager.cpp" />
   </ItemGroup>
@@ -142,33 +141,31 @@
     <ClInclude Include="basebox\service_desc.h" />
     <ClInclude Include="basebox\service_manager.h" />
     <ClInclude Include="basebox\service_ref.h" />
-    <ClInclude Include="basebox\template_factory.h" />
     <ClInclude Include="base\io_service.h" />
     <ClInclude Include="base\io_service_ref.h" />
     <ClInclude Include="base\reference.h" />
     <ClInclude Include="base\ref_object.h" />
     <ClInclude Include="base\utility.h" />
-    <ClInclude Include="base_object\channel_template.h" />
-    <ClInclude Include="base_object\device_template.h" />
-    <ClInclude Include="base_object\file_object.h" />
-    <ClInclude Include="base_object\service_template.h" />
-    <ClInclude Include="frontend\http_forward.h" />
     <ClInclude Include="frontend\http_message.h" />
     <ClInclude Include="frontend\http_message_impl.h" />
-    <ClInclude Include="frontend\http_object_template.h" />
     <ClInclude Include="frontend\http_request.h" />
     <ClInclude Include="frontend\http_request_manager.h" />
-    <ClInclude Include="frontend\http_request_template.h" />
     <ClInclude Include="frontend\http_response.h" />
     <ClInclude Include="frontend\http_response_impl.h" />
-    <ClInclude Include="frontend\http_response_template.h" />
     <ClInclude Include="frontend\http_server.h" />
     <ClInclude Include="frontend\http_websocket.h" />
     <ClInclude Include="frontend\http_websocket_impl.h" />
     <ClInclude Include="frontend\http_websocket_manager.h" />
-    <ClInclude Include="frontend\http_websocket_template.h" />
+    <ClInclude Include="js\backend\channel_template.h" />
+    <ClInclude Include="js\device_template.h" />
+    <ClInclude Include="js\file_object.h" />
+    <ClInclude Include="js\frontend\http_object_template.h" />
+    <ClInclude Include="js\frontend\http_request_template.h" />
+    <ClInclude Include="js\frontend\http_response_template.h" />
+    <ClInclude Include="js\frontend\http_websocket_template.h" />
+    <ClInclude Include="js\service_template.h" />
+    <ClInclude Include="js\template_factory.h" />
     <ClInclude Include="localbox.h" />
-    <ClInclude Include="main_ui_channel.h" />
     <ClInclude Include="sample.h" />
     <ClInclude Include="server_manager.h" />
   </ItemGroup>
